--- a/post/2025-05-12-unit04/scGPT/scgpt-quickstart.qmd
+++ b/post/2025-05-12-unit04/scGPT/scgpt-quickstart.qmd
@@ -9,6 +9,8 @@ categories:
     - gene46100
 ---
 
+This tutorial will guide you through using scGPT, a foundation model for single-cell data analysis. We'll learn how to process single-cell data and generate meaningful embeddings that can be used for various downstream analyses.
+
 Downloaded from 
 https://virtualcellmodels.cziscience.com/quickstart/scgpt-quickstart
 
@@ -26,6 +28,11 @@ By the end of this tutorial, you will understand how to:
 
 ### Pre-requisites and Requirements
 
+> **Important**: Before starting, make sure you have:
+> 1. Python 3.9 installed
+> 2. Basic understanding of single-cell data analysis
+> 3. At least 32GB of RAM (tested on M3 MacBook)
+
 Before starting, ensure you are familiar with:
 
 * Python and AnnData
@@ -35,6 +42,8 @@ Before starting, ensure you are familiar with:
 ![AnnData schema](/post/images/anndata_schema.svg){width=50%}
 
 ### AnnData Structure
+
+> **Key Concept**: AnnData is the fundamental data structure for single-cell analysis in Python. Understanding its structure is necessary for working with scGPT and other tools.
 
 The AnnData object is a Python-based data structure used by scanpy, scGPT, and other single-cell analysis tools. Here are its key components:
 
@@ -56,19 +65,30 @@ This notebook provides a step-by-step guide to:
 * Performing model inference to create embeddings
 * Visualizing the results with UMAP
 
-
 ### Setup
+
+> **Environment Setup Note**: 
+> 1. We'll create a new conda environment for this tutorial
+> 2. We need specific versions of PyTorch and other dependencies
+> 3. The setup process might take a few minutes
 
 Let's start by setting up dependencies. The released version of scGPT requires PyTorch 2.1.2, so we will remove the existing PyTorch installation and replace it with the required one. If you want to run this on another environment, this step might not be necessary.
 
-** but then I got error about torch version. So I installed torch 2.3.0 and torchvision 0.16.2. and then reinstalled torch 2.1.2.**
+**Note**: I encountered an error with torch version. I installed torch 2.3.0 and torchvision 0.16.2, and then reinstalled torch 2.1.2.
 
 ```{{bash}}
+# Create and activate a new conda environment
 conda create -n scgpt python=3.9
 conda activate scgpt
 ```
 
 ```{python}
+#| label: setup-dependencies
+#| echo: true
+#| output: true
+#| fold: true
+
+# Environment setup and package installation
 first_time = False
 if first_time:
     # First uninstall the conflicting packages
@@ -78,7 +98,6 @@ if first_time:
     %pip install -q torch==2.3.0 torchvision==0.16.2
     %pip install -q scgpt scanpy gdown
 
-
     # Then install them in the correct order with specific versions
     %pip install numpy==1.23.5
     %pip install pandas==1.5.3  # This version is compatible with anndata 0.10.9
@@ -87,24 +106,27 @@ if first_time:
     %pip install anndata==0.10.9
     %pip install cell-gears==0.0.2
     %pip install dcor==0.6
-
     %pip install datasets==2.3.0
-
 
     # First uninstall both packages
     %pip uninstall -y torch torchtext
 
     # Then install compatible versions
     %pip install torch==2.1.2 torchtext==0.16.2
-
 ```
 
-We can install the rest of our dependencies and import the relevant libraries.
+> **Package Installation Note**: 
+> - We install specific versions of packages to ensure compatibility
+> - The order of installation matters
+> - Some packages are uninstalled first to avoid conflicts
 
 ```{python}
-# Import libraries
+#| label: import-libraries
+#| echo: true
+#| output: true
+#| fold: true
 
-# Import required packages
+# Import libraries
 import os
 import multiprocessing
 
@@ -139,28 +161,44 @@ print("Note: Some operations may fall back to CPU due to MPS limitations")
 warnings.filterwarnings("ignore")
 ```
 
+> **Library Import Note**:
+> - We import all necessary libraries for data processing and model inference
+> - Special handling for macOS MPS (Metal Performance Shaders)
+> - Warning suppression for cleaner output
+
 ```{python}
+#| label: setup-directories
+#| echo: true
+#| output: true
+
 # Define the base working directory
 WORKDIR = "/Users/haekyungim/Library/CloudStorage/Box-Box/LargeFiles/imlab-data/data-Github/web-data/web-GENE-46100/scgpt"
 # Convert to Path objects for better path handling
 WORKDIR = Path(WORKDIR)
 DATA_DIR = WORKDIR / "data"
 MODEL_DIR = WORKDIR / "model" 
-
 ```
 
+> **Directory Setup Note**:
+> - We create a structured directory for data and model files
+> - Using Path objects for cross-platform compatibility
 
-Download Model Checkpoints and Data
+### Download and Prepare Data
 
-Let's download the checkpoints from the scGPT repository.
+> **Data Download Note**:
+> - We'll download both the model and a sample dataset
+> - The dataset will be processed to reduce memory usage
+> - We'll use highly variable genes for better analysis
 
 ```{python}
+#| label: download-model
+#| echo: true
+#| output: true
 
 warnings.simplefilter("ignore", ResourceWarning)
 warnings.filterwarnings("ignore", category=ImportWarning)
 
 # Use gdown with the recursive flag to download the folder
-# Replace the folder ID with the ID of your folder
 folder_id = '1oWh_-ZRdhtoGQ2Fw24HP41FgLoomVo-y'
 
 # Check if model files already exist
@@ -169,12 +207,18 @@ if not (MODEL_DIR / "args.json").exists():
     !gdown --folder {folder_id} -O {MODEL_DIR}
 else:
     print("Model files already exist in", MODEL_DIR)
-
 ```
 
-We will now download an H5AD dataset from CZ CELLxGENE. To reduce memory utilization, we will also perform a reduction to the top 3000 highly variable genes using scanpy's highly_variable_genes function.
+> **Model Download Note**:
+> - The model is downloaded from Google Drive
+> - We check if files exist to avoid re-downloading
+> - The model is about 200MB in size
 
 ```{python}
+#| label: download-data
+#| echo: true
+#| output: true
+
 uri = "https://datasets.cellxgene.cziscience.com/f50deffa-43ae-4f12-85ed-33e45040a1fa.h5ad"
 source_path = DATA_DIR / "source.h5ad"
 
@@ -189,16 +233,33 @@ else:
 adata = sc.read_h5ad(source_path)
 
 batch_key = "sample"
-N_HVG = 3000
+N_HVG = 3000  # Number of highly variable genes to select
 
+# Select highly variable genes to reduce memory usage
 sc.pp.highly_variable_genes(adata, n_top_genes=N_HVG, flavor='seurat_v3')
 adata_hvg = adata[:, adata.var['highly_variable']]
-
 ```
 
-We can now use embed_data to generate the embeddings. Note that gene_col needs to point to the column where the gene names (not symbols!) are defined. For CZ CELLxGENE datasets, they are stored in the feature_name column.
+> **Data Processing Note**:
+> - We download a sample dataset from CZ CELLxGENE
+> - The dataset is reduced to 3000 highly variable genes
+> - This reduction helps with memory usage and computation speed
+
+### Model Inference and Embedding Generation
+
+> **Key Concept**: In this section, we'll:
+> 1. Set up the model for inference
+> 2. Generate cell embeddings using scGPT
+> 3. Process these embeddings for downstream analysis
+> 
+> **Note**: The embedding generation process might take several minutes depending on your hardware.
 
 ```{python}
+#| label: setup-embedding
+#| echo: true
+#| output: true
+#| fold: true
+
 # Monkey patch get_batch_cell_embeddings to force single processor
 import types
 from scgpt.tasks.cell_emb import get_batch_cell_embeddings as original_get_batch_cell_embeddings
@@ -210,6 +271,10 @@ from tqdm import tqdm
 
 # Define Dataset class at module level
 class CellEmbeddingDataset(Dataset):
+    """
+    Custom dataset class for cell embedding generation.
+    Processes single-cell data into a format suitable for the scGPT model.
+    """
     def __init__(self, count_matrix, gene_ids, batch_ids=None, vocab=None, model_configs=None):
         self.count_matrix = count_matrix
         self.gene_ids = gene_ids
@@ -221,6 +286,7 @@ class CellEmbeddingDataset(Dataset):
         return len(self.count_matrix)
 
     def __getitem__(self, idx):
+        # Process a single cell's data
         row = self.count_matrix[idx]
         nonzero_idx = np.nonzero(row)[0]
         values = row[nonzero_idx]
@@ -252,14 +318,15 @@ def patched_get_batch_cell_embeddings(
 ) -> np.ndarray:
     """
     Patched version of get_batch_cell_embeddings that uses the module-level Dataset class
-    and forces num_workers=0.
+    and forces num_workers=0 for better compatibility.
     """
+    # Convert data to appropriate format
     count_matrix = adata.X
     count_matrix = (
         count_matrix if isinstance(count_matrix, np.ndarray) else count_matrix.toarray()
     )
 
-    # gene vocabulary ids
+    # Get gene vocabulary ids
     if gene_ids is None:
         gene_ids = np.array(adata.var["id_in_vocab"])
         assert np.all(gene_ids >= 0)
@@ -268,6 +335,7 @@ def patched_get_batch_cell_embeddings(
         batch_ids = np.array(adata.obs["batch_id"].tolist())
 
     if cell_embedding_mode == "cls":
+        # Set up dataset and data loader
         dataset = CellEmbeddingDataset(
             count_matrix, 
             gene_ids, 
@@ -291,18 +359,18 @@ def patched_get_batch_cell_embeddings(
             sampler=SequentialSampler(dataset),
             collate_fn=collator,
             drop_last=False,
-            num_workers=0,  # Force single worker
+            num_workers=0,  # Force single worker for compatibility
             pin_memory=True,
         )
 
-        # Use the global device variable instead of getting it from model
+        # Generate embeddings
         cell_embeddings = np.zeros(
             (len(dataset), model_configs["embsize"]), dtype=np.float32
         )
         with torch.no_grad():
-            # Disable autocast for MPS as it's not supported
             count = 0
             for data_dict in tqdm(data_loader, desc="Embedding cells"):
+                # Process each batch of cells
                 input_gene_ids = data_dict["gene"].to(device)
                 src_key_padding_mask = input_gene_ids.eq(
                     vocab[model_configs["pad_token"]]
@@ -316,6 +384,7 @@ def patched_get_batch_cell_embeddings(
                     else None,
                 )
 
+                # Extract CLS token embeddings and normalize
                 embeddings = embeddings[:, 0, :]  # get the <cls> position embedding
                 embeddings = embeddings.cpu().numpy()
                 cell_embeddings[count : count + len(embeddings)] = embeddings
@@ -334,8 +403,18 @@ scgpt.tasks.cell_emb.get_batch_cell_embeddings = patched_get_batch_cell_embeddin
 os.environ['PYTHONWARNINGS'] = 'ignore'
 ```
 
+> **Technical Note**: The code above:
+> - Creates a custom dataset class for processing single-cell data
+> - Implements a patched version of the embedding function for better compatibility
+> - Handles data batching and normalization
+> - Uses the CLS token for cell representation
+
 ```{python}
-model_dir = MODEL_DIR #/ "scGPT_human"
+#| label: generate-embeddings
+#| echo: true
+#| output: true
+
+model_dir = MODEL_DIR
 gene_col = "feature_name"
 cell_type_key = "cell_type"
 
@@ -353,79 +432,153 @@ else:
         obs_to_save=cell_type_key,
         batch_size=64,
         return_new_adata=True,
-        device=device,  # Pass the device to embed_data
+        device=device,
     )
     print(f"Saving embeddings to {embedding_file}")
     ref_embed_adata.write(str(embedding_file))
-
-
-
 ```
 
-Our scGPT embeddings are stored in the .X attribute of the returned AnnData object and have a dimensionality of 512.
+> **Embedding Generation Note**:
+> - We first check if embeddings already exist to avoid recomputing
+> - The embedding process generates a 512-dimensional representation for each cell
+> - Results are saved for future use
 
 ```{python}
+#| label: check-embeddings
+#| echo: true
+#| output: true
+
+# Check the shape of our embeddings
 ref_embed_adata.X.shape
-
 ```
 
-We can now calculate neighbors based on scGPT embeddings.
+> **Shape Explanation**:
+> - The output shows (number of cells × 512)
+> - 512 is the embedding dimension of scGPT
+> - Each cell is represented by a 512-dimensional vector
+
+### Dimensionality Reduction and Visualization
+
+> **Key Concept**: In this section, we'll:
+> 1. Compute cell-cell similarities using the embeddings
+> 2. Generate a UMAP visualization
+> 3. Compare different cell type annotations
+> 
+> **Note**: UMAP helps us visualize high-dimensional data in 2D while preserving important relationships.
+
 ```{python}
+#| label: compute-neighbors
+#| echo: true
+#| output: true
+
+# Compute cell-cell similarities
 sc.pp.neighbors(ref_embed_adata, use_rep="X")
+# Generate UMAP coordinates
 sc.tl.umap(ref_embed_adata)
 ```
 
-We will put our calculated UMAP and embeddings in our original adata object with our original annotations.
+> **Neighborhood Graph Note**:
+> - We compute a neighborhood graph based on the embeddings
+> - This graph is used to generate the UMAP visualization
+
 ```{python}
+#| label: transfer-embeddings
+#| echo: true
+#| output: true
+
+# Transfer embeddings and UMAP to original adata object
 adata.obsm["X_scgpt"] = ref_embed_adata.X
 adata.obsm["X_umap"] = ref_embed_adata.obsm["X_umap"]
 ```
 
-We can also switch our .var index which is currently set to Ensembl ID's, to be gene symbols, allowing us to plot gene expression more easily.
+> **Data Transfer Note**:
+> - We transfer the embeddings and UMAP coordinates to our original dataset
+> - This allows us to use the original annotations with our new embeddings
+> - The embeddings are stored in `.obsm` for easy access
 
 ```{python}
+#| label: prepare-gene-names
+#| echo: true
+#| output: true
+
 # Add the current index ('ensembl_id') as a new column
 adata.var['ensembl_id'] = adata.var.index
 
 # Set the new index to the 'feature_name' column
 adata.var.set_index('feature_name', inplace=True)
-```
 
-```{python}
 # Add a copy of the gene symbols back to the var dataframe
 adata.var['gene_symbol'] = adata.var.index
 ```
 
-We can now plot a UMAP, coloring it by cell type to visualize our embeddings. Below, we color by both the standard cell type labels provided by CZ CELLxGENE and the original cell type annotations from the authors. The embeddings generated by scGPT effectively capture the structure of the data, closely aligning with the original author annotations.
+> **Gene Name Processing Note**:
+> - We reorganize the gene annotations for easier access
+> - This allows us to use gene symbols in visualizations
+> - Both Ensembl IDs and gene symbols are preserved
+
+### Visualization
+
+> **Key Concept**: In this section, we'll:
+> 1. Visualize the UMAP colored by different cell type annotations
+> 2. Examine marker gene expression
+> 3. Compare different annotation schemes
 
 ```{python}
+#| label: plot-umap-celltypes
+#| echo: true
+#| output: true
+
 with warnings.catch_warnings():
     warnings.filterwarnings("ignore")
-    #sc.pp.neighbors(ref_embed_adata, use_rep="X")
-    #sc.tl.umap(ref_embed_adata)
     sc.pl.umap(adata, color=["cell_type", "annotation_res0.34_new2"], wspace = 0.6)
-
 ```
 
-We can also take a look at some markers of the major cell types represented in the dataset.
+> **UMAP Visualization Note**:
+> - The plot shows cells colored by two different annotation schemes
+> - This helps us compare different cell type classifications
+> - The spatial organization reflects cell type relationships
+
 ```{python}
-sc.pl.umap(adata, color=['cell_type', 'MKI67', 'LYZ', 'RBP2', 'MUC2', 'CHGA', 'TAGLN', 'ELAVL3'], frameon=False, use_raw=False, legend_fontsize ="xx-small", legend_loc="none")
+#| label: plot-umap-markers
+#| echo: true
+#| output: true
+
+# Visualize marker genes for different cell types
+sc.pl.umap(adata, 
+           color=['cell_type', 'MKI67', 'LYZ', 'RBP2', 'MUC2', 'CHGA', 'TAGLN', 'ELAVL3'], 
+           frameon=False, 
+           use_raw=False, 
+           legend_fontsize="xx-small", 
+           legend_loc="none")
 ```
 
-References
+> **Marker Gene Note**:
+> - We visualize expression of key marker genes
+> - These genes help identify different cell types:
+>   - MKI67: Proliferating cells
+>   - LYZ: Myeloid cells
+>   - RBP2: Enterocytes
+>   - MUC2: Goblet cells
+>   - CHGA: Enteroendocrine cells
+>   - TAGLN: Smooth muscle cells
+>   - ELAVL3: Neurons
 
-Please refer to the following papers for information about:
+### References
 
-scGPT: Toward building a foundation model for single-cell multi-omics using generative AI
+> **Key Papers**:
+> 1. scGPT paper: Foundation model for single-cell multi-omics
+> 2. Dataset paper: iPSC-derived small intestine-on-chip
+> 3. CZ CELLxGENE platform paper
 
-Cui, H., Wang, C., Maan, H. et al. scGPT: toward building a foundation model for single-cell multi-omics using generative AI. Nat Methods 21, 1470–1480 (2024). https://doi.org/10.1038/s41592-024-02201-0
+Please refer to the following papers for more information:
 
-The dataset used in this tutorial
+1. **scGPT: Toward building a foundation model for single-cell multi-omics using generative AI**
+Cui, H., Wang, C., Maan, H. et al. Nature Methods 21, 1470–1480 (2024) https://doi.org/10.1038/s41592-024-02201-0
 
-Moerkens, R., Mooiweer, J., Ramírez-Sánchez, A. D., Oelen, R., Franke, L., Wijmenga, C., Barrett, R. J., Jonkers, I. H., & Withoff, S. (2024). An iPSC-derived small intestine-on-chip with self-organizing epithelial, mesenchymal, and neural cells. Cell Reports, 43(7). https://doi.org/10.1016/j.celrep.2024.114247
+2. **The dataset used in this tutorial**
+Moerkens, R., et al. Cell Reports, 43(7) (2024) https://doi.org/10.1016/j.celrep.2024.114247
 
-CZ CELLxGENE Discover and Census
-
-CZ CELLxGENE Discover: A single-cell data platform for scalable exploration, analysis and modeling of aggregated data CZI Single-Cell Biology, et al. bioRxiv 2023.10.30; doi: https://doi.org/10.1101/2023.10.30.563174
+3. **CZ CELLxGENE Discover and Census**
+CZI Single-Cell Biology, et al. bioRxiv 2023.10.30 doi: https://doi.org/10.1101/2023.10.30.563174
 
 
