trying to render in new mac not finished

--- a/post/2025-04-15-unit01/nano-gpt/Genome_Language_Model_Spring_2025.qmd
+++ b/post/2025-04-15-unit01/nano-gpt/Genome_Language_Model_Spring_2025.qmd
@@ -7,7 +7,7 @@ categories:
   - gene46100
 description: Henry's genomic language model trained on human reference genome with  nanogpt
 date-modified: last-modified
-draft: true
+draft: false
 eval: false
 jupyter: 
   kernelspec:
